fix text align

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@
   align-items: center;
   justify-content: space-between;
   flex-direction: row-reverse;
+  text-align: end;
 }
 
 .panel-line {
